🚨📼 Checkpoint ./server.js:111231/192 ./package.json:111231/275 ./README.md:111231/73 ./views/index.html:111231/240 ./.glitch-assets:111231/86

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codelab-notifications-push-server",
-  "version": "0.0.1",
+  "name": "push-notifications-server-codelab-incomplete",
+  "version": "1.0.0",
   "description": "Codelab: Build a push notifications server",
   "main": "server.js",
   "scripts": {
@@ -8,22 +8,17 @@
     "start": "npm run clean; node server.js;"
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "web-push": "^3.4.1",
-    "body-parser": "^1.19.0",
-    "express-session": "^1.16.2",
-    "lowdb": "^1.0.0"
+    "express": "4.16.4",
+    "web-push": "3.4.1",
+    "body-parser": "1.19.0",
+    "express-session": "1.16.2",
+    "lowdb": "1.0.0"
   },
   "engines": {
-    "node": "8.x"
+    "node": "8.15.1"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/codelab-notifications-push-server"
+    "url": "push-notifications-server-codelab-incomplete"
   },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+  "license": "Apache-2.0"
 }
